--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,6 @@
-theme: jekyll-theme-cayman
+#theme: jekyll-theme-cayman
+plugins:
+  - jekyll-include-cache
+  - jekyll-remote-theme
+
+remote_theme: "mmistakes/minimal-mistakes"
