Added instances and tools (TODO). Added XSD file.

--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -5,3 +5,7 @@ main:
     url: "/schema"
   - title: "Catalog"
     url: "/catalog"
+  - title: "Instances"
+    url: "/instances"
+  - title: "Tools"
+    url: "/tools"
